' =====================================================
' Titre: Architecture du Système de Chat - Diagramme de Classe
' Description: Montre l'architecture et les relations entre classes du système de chat
' Acteurs: User, Chat, Message, Block, Notification
' =====================================================

@startuml Class Diagram - Chat System
!theme plain
skinparam backgroundColor #f5f5f5
skinparam classBackgroundColor #ffffff
skinparam classBorderColor #667eea

class User {
    - id: int
    - fullname: string
    - passwordHash: string
    - email: string
    - role: Role
    - bio: string
    - avatarPath: string
    - createdAt: LocalDateTime
    - lastLoginAt: LocalDateTime
    - isSuspended: boolean
    - suspensionReason: string
    - categories: List<Category>
    --
    + getId(): int
    + getEmail(): string
    + getFullname(): string
    + getPasswordHash(): string
    + getRole(): Role
    + getBio(): string
    + getAvatarPath(): string
    + getCreatedAt(): LocalDateTime
    + setFullname(name: string): void
    + setBio(bio: string): void
    + setRole(role: Role): void
}

class Chat {
    - id: int
    - type: ChatType
    - name: string
    - createdById: int
    - participants: List<User>
    - messages: List<Message>
    - createdAt: LocalDateTime
    - lastMessageAt: LocalDateTime
    - isActive: boolean
    --
    + getId(): int
    + getType(): ChatType
    + getName(): string
    + getParticipants(): List<User>
    + isPrivate(): boolean
    + isGroup(): boolean
    + addParticipant(user: User): void
    + removeParticipant(user: User): void
}

enum ChatType {
    PRIVATE
    GROUP
}

class Message {
    - id: int
    - chatId: int
    - senderId: int
    - senderFullname: string
    - content: string
    - createdAt: LocalDateTime
    - editedAt: LocalDateTime
    - isEdited: boolean
    - isDeleted: boolean
    --
    + getId(): int
    + getChatId(): int
    + getSenderId(): int
    + getSenderFullname(): string
    + getContent(): string
    + getCreatedAt(): LocalDateTime
    + getEditedAt(): LocalDateTime
    + isEdited(): boolean
    + isDeleted(): boolean
    + setContent(content: string): void
    + setEdited(edited: boolean): void
    + setDeleted(deleted: boolean): void
}

class Block {
    - id: int
    - chatId: int
    - blockedId: int
    - blockerId: int
    - createdAt: LocalDateTime
    --
    + getId(): int
    + getChatId(): int
    + getBlockedId(): int
    + getBlockerId(): int
    + getCreatedAt(): LocalDateTime
    + setChatId(chatId: int): void
    + setBlockedId(blockedId: int): void
    + setBlockerId(blockerId: int): void
    + setCreatedAt(createdAt: LocalDateTime): void
}

class Notification {
    - id: int
    - userId: int
    - type: NotificationType
    - content: string
    - isRead: boolean
    - createdAt: LocalDateTime
    --
    + getId(): int
    + getUserId(): int
    + getContent(): string
    + isRead(): boolean
    + markAsRead(): void
}

enum NotificationType {
    MESSAGE
    FRIEND_REQUEST
    SYSTEM
}

class SessionFacade {
    - currentUser: User
    - userManager: UserManager
    - chatManager: ChatManager
    - notificationManager: NotificationManager
    --
    + login(email: string, password: string): User
    + logout(): void
    + getCurrentUser(): User
    + createPrivateChat(user1: User, user2: User): Chat
    + createGroupChat(name: string, creator: User, participants: List<User>): Chat
    + sendMessage(userId: int, chatId: int, content: string): Message
    + getMessages(chatId: int, page: int): List<Message>
    + addParticipantToGroup(chatId: int, user: User): boolean
    + getChatsForUser(userId: int): List<Chat>
}

class ChatManager {
    - chatFactory: ChatFactory
    - chatDAO: ChatDAO
    - messageDAO: MessageDAO
    - blockDAO: BlockDAO
    --
    + createPrivateChat(user1: User, user2: User): Chat
    + createGroupChat(name: string, creator: User, participants: List<User>): Chat
    + getChatById(id: int): Optional<Chat>
    + getChatsForUser(userId: int): List<Chat>
    + sendMessage(userId: int, chatId: int, content: string): Message
    + editMessage(messageId: int, newContent: string, userId: int): boolean
    + deleteMessage(messageId: int, userId: int): boolean
    + blockUser(chatId: int, blockedId: int, blockerId: int): boolean
    + unblockUser(chatId: int, unblockedId: int, blockerId: int): boolean
    + addParticipantToGroup(chatId: int, user: User): boolean
}

class ChatViewController {
    - chatTitleLabel: Label
    - messageListView: ListView<Message>
    - messageInputArea: TextArea
    - sendButton: Button
    - addMemberButton: Button
    - participantListLabel: Label
    - currentChat: Chat
    - currentUser: User
    --
    + setChat(chat: Chat, user: User): void
    + initialize(): void
    - loadChatData(): void
    - sendMessage(): void
    - addMember(): void
    - setupMessageList(): void
}

Chat --> ChatType
Chat "1" *-- "*" Message
Chat "1" *-- "*" User
User "1" -- "*" Message: sends
Message "1" -- "*" Notification
Block "many" -- "1" Chat
Block "many" -- "1" User: blocks
Block "many" -- "1" User: blocked by

SessionFacade --> ChatManager
SessionFacade --> User
SessionFacade --> Chat
ChatManager --> Chat
ChatManager --> Message
ChatManager --> Block
ChatViewController --> SessionFacade
ChatViewController --> Chat
ChatViewController --> User

@enduml
